<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.lucee</groupId>
  <artifactId>core</artifactId>
  <version>5.0.0.141</version>
  <packaging>pom</packaging>

  <name>Lucee Core Build</name>
  <description>Building the Lucee Core File</description>
  <url>https://maven.lucee.org/core/</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>

  <licenses>
    <license>
     <name>The GNU Lesser General Public License, Version 2.1</name>
     <url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
     <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>micstriit</id>
      <name>Michael Offner</name>
      <email>michael@lucee.org</email>
      <organization>Lucee Association Switzerland</organization>
      <organizationUrl>https://lucee.org</organizationUrl>
      <roles>
        <role>Project-Administrator</role>
        <role>Developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>isapir</id>
      <name>Igal Sapir</name>
      <email>dev@21solutions.net</email>
      <organization>21 Solutions</organization>
      <organizationUrl>http://21solutions.net/</organizationUrl>
      <roles>
          <role>Developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
  </developers>


    <build>
        <resources>
          <resource>
            <directory>src/main/resources</directory>
          </resource>
          <resource>
            <directory>src/main/java</directory>
          </resource>
        </resources>

      <plugins>
        <plugin>
          <groupId>org.sonatype.central</groupId>
          <artifactId>central-publishing-maven-plugin</artifactId>
          <version>0.8.0</version>
          <extensions>true</extensions>
          <configuration>
            <publishingServerId>ossrh</publishingServerId>
            <autoPublish>true</autoPublish>
          </configuration>
        </plugin>
      </plugins>
    </build>

	<dependencies>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>lucee</artifactId>
      <version>7.0.0.211-BETA</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.felix</groupId>
      <artifactId>org.apache.felix.framework</artifactId>
      <version>7.0.5</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>tika-core</artifactId>
      <version>1.28.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.15</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.5.0</version>
      <scope>provided</scope>
    </dependency>
	<dependency>
    <groupId>org.lucee</groupId>
    <artifactId>commons-email-all</artifactId>
    <version>1.6.0</version>
    <scope>provided</scope>
  </dependency>
<dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-fileupload2-core</artifactId>
    <version>2.0.0-M5</version>
</dependency>
  	<dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.21.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-pool2</artifactId>
      <version>2.13.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache</groupId>
      <artifactId>oro</artifactId>
      <version>2.0.8</version>
      <scope>provided</scope>
    </dependency>
  <dependency>
    <groupId>org.lucee</groupId>
    <artifactId>log4j-core</artifactId>
    <version>2.26.0</version>
  </dependency>
  <dependency>
    <groupId>org.lucee</groupId>
    <artifactId>log4j-api</artifactId>
    <version>2.26.0</version>
  </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>httpcomponents-httpclient</artifactId>
    	<version>4.5.14</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>httpcomponents-httpcore</artifactId>
    	<version>4.4.16</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>httpcomponents-httpmime</artifactId>
    	<version>4.5.14</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.4.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
	    <groupId>org.ow2.asm</groupId>
	    <artifactId>asm</artifactId>
	    <version>9.9.1</version>
      <scope>provided</scope>
    </dependency>
     <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-commons</artifactId>
      <version>9.9.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>9.9.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>9.9.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
	    <groupId>org.ow2.asm</groupId>
	    <artifactId>asm-analysis</artifactId>
	    <version>9.9.1</version>
	</dependency>
    <dependency>
<groupId>jakarta.platform</groupId>
<artifactId>jakarta.jakartaee-api</artifactId>
<version>10.0.0</version>
<scope>provided</scope>
</dependency>
  </dependencies>

  <repositories>
    <repository>
       <id>repo</id>
       <url>https://raw.githubusercontent.com/lucee/mvn/master/releases</url>
    </repository>
    <repository>
      <id>snapi</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </repository>
    <repository>
      <id>res</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
  </repositories>

  <scm>
    <url>https://github.com/lucee/Lucee</url>
    <connection>scm:git:git://github.com/lucee/Lucee.git</connection>
    <developerConnection>scm:git:git@github.com:lucee/Lucee.git</developerConnection>
    <tag>Plugin to create Lucee Core files.</tag>
  </scm>

  <!-- <distributionManagement>
    <repository>
      <id>ossrh</id>
      <url>https://central.sonatype.com/api/v1/publisher/upload</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://ossrh-staging-api.central.sonatype.com/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement> -->

</project>